css/style.css
@font-face {
    font-family: 'Proxima Nova Light';
    src: url('../fonts/ProximaNova-Light.eot');
    src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),
    url('../fonts/ProximaNova-Light.woff') format('woff'),
    url('../fonts/ProximaNova-Light.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    }

@font-face {
    font-family: 'Proxima Nova Regular';
    src: url('../fonts/ProximaNova-Regular.eot');
    src: url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/ProximaNova-Regular.woff') format('woff'),
    url('../fonts/ProximaNova-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    }

body {
    background: #ffffff;
    text-decoration: none;
    width: 100%;
    height: 100%;
}

body, form, div, p, a, img, h1, h2, h3, h4, h5, h6, table, table tr, table td {
    border: none;
    color: #000000;
    font-family: Arial;
    font-size: 14px;
    font-style: normal;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

input,
textarea,
select {
    outline: none;
    font-family: Arial;
    font-size: 12px;
    box-sizing: border-box;
}

input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

a {
    text-decoration: underline;
    outline: none;
}

a:hover {
    text-decoration: none;
}

h1, h2 {
    font-size: 20px;
    padding: 0 0 10px 0;
    color: #545454;
}

.block-features{
    background-color: #ffffff;
}

.block-features .mainer{
    max-width: 970px;
    margin: 0 auto;
    padding: 0 15px;
}

.block-features .wrapper{
    display: flex;
    margin: 0 -15px;
}

.block-features .cell{
    flex-grow: 1;
    padding: 56px 15px;
}

.round{
    border-radius: 50%;
    background-color: #3071b2;
    height: 62px;
    width: 62px;
    margin: 0 auto;
    border: 2px solid #3071b2;
}

.round p{
    text-align: center;
    padding: 17px;
}

.block-features .caption{
    text-align: center;
    color: #1a0000;
    text-transform: uppercase;
    margin: 20px 0 13px 0;
    font-family: 'Proxima Nova Regular';
    font-weight: bold;
}

.block-features .description{
    color: #9d9d9d;
    font-family: 'Proxima Nova Light';
    line-height: 20px;
    text-align: center;
}


.block-features .settings{
    background-position: 0 0;
    background-image: url(../images/Settings.png);
    height: 26px;
    width: 26px;
    margin: -15px auto;
    
}

.round:hover{
    background-color: white ;
    border: 2px solid #3876b5;
    }

.round:hover  .settings{
    background-position: 0 -26px;
}

.block-features .mobile{
    background-position: 0 0;
    background-image: url(../images/mobile.png);
    height: 30px;
    width: 28px;
    margin: -15px auto;
}

.round:hover  .mobile{
    background-position: 0 -30px;
}

.block-features .dash{
    background-position: 0 0;
    background-image: url(../images/Dashboard2848.png);
    height: 24px;
    width: 28px;
    margin: -15px auto;
}

.round:hover  .dash{
    background-position: 0 -24px;
}

